# otk-core

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
adapter-event-log-segment/: .gitignore  Cargo.toml  README.md
adapter-event-log-segment/src/: config.rs  lib.rs  log.rs  segment.rs  subscription.rs
adapter-ingest-tcp/: Cargo.toml  README.md  clippy.toml
adapter-ingest-tcp/src/: config.rs  lib.rs  port.rs  session.rs  tls.rs
adapter-ingest-tcp/tests/: tls_handshake.rs  tls_producer_e2e.rs
adapter-ingest-unix-socket/: Cargo.toml  README.md
adapter-ingest-unix-socket/src/: config.rs  lib.rs  port.rs  session.rs
conformance/: .gitignore  Cargo.toml  README.md
conformance-fixtures/: Cargo.toml  README.md
conformance-fixtures/src/: detections.rs  envelopes.rs  events.rs  lib.rs  streams.rs
conformance/src/: lib.rs  mem_log.rs
conformance/tests/: contracts_dyn_safety.rs  event_log_contract.rs  event_log_retention.rs  event_model_roundtrip.rs  frame_codec_contract.rs  ingest_protocol_contract.rs  wire_protocol_envelope.rs  wire_protocol_handshake.rs
event-model/: Cargo.toml  README.md
event-model/src/: crossing.rs  detection.rs  health.rs  ids.rs  lib.rs  metadata.rs  stream.rs  timestamp.rs
frame-codec/: Cargo.toml
frame-codec/src/: error.rs  lib.rs  serial.rs  stream.rs
ingest-protocol/: Cargo.toml
ingest-protocol/src/: error.rs  handshake.rs  lib.rs  processor.rs
otk-contracts/: Cargo.toml
otk-contracts/src/: adapter.rs  lib.rs  timebase.rs
otk-devcerts/: Cargo.toml  README.md
otk-devcerts/src/: main.rs
otk-protocol/: Cargo.toml  README.md
otk-protocol/src/: envelope.rs  heartbeat.rs  lib.rs  message.rs  traceparent.rs
otk-sdk/: .gitignore  Cargo.toml  README.md
otk-sdk/src/: lib.rs
otk-sdk/src/client/: client.rs  error.rs  mod.rs
otk-sdk/src/producer/: adapter.rs  builder.rs  error.rs  mod.rs  producer.rs  seq.rs  time.rs  timebase.rs  tls.rs  transport.rs
port-in-ingest/: Cargo.toml  README.md
port-in-ingest/src/: error.rs  lib.rs  port.rs  session.rs
port-out-event-log/: Cargo.toml  README.md
port-out-event-log/src/: entry.rs  error.rs  lib.rs  log.rs  offset.rs  retention.rs
producer-simulated/: .gitignore  Cargo.toml  LICENSE  README.md  sim-finish.toml  sim-start-tls.toml  sim-start.toml
producer-simulated/src/: adapter.rs  config.rs  lib.rs  main.rs  runner.rs
protocol/: Cargo.toml  README.md
protocol/src/: envelope.rs  error.rs  handshake.rs  ids.rs  lib.rs
spec/: .gitignore  README.md  architecture.md  compatibility.md  downlink.md  glossary.md  open-questions.md  topologies.md
timing-core/: Cargo.toml  README.md
timing-core/src/: config.rs  crossing.rs  lib.rs  processor.rs  testing.rs
timing-core/src/domain/: crossing.rs  crossing_processor.rs  mod.rs  sequence_gate.rs
timing-core/src/ports/: mod.rs
timing-core/src/ports/inbound/: ingest.rs  mod.rs  query.rs
timing-core/src/ports/outbound/: event_log.rs  metrics.rs  mod.rs
timing-core/src/services/: event_ingest.rs  mod.rs
timing-node/: Cargo.toml  README.md  node-tls.toml
timing-node/src/: api.rs  auth.rs  config.rs  ingest.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  ports.rs  reload.rs  sequence_gate.rs  trace_context.rs
timing-node/tests/: api_ops_test.rs  api_test.rs  ingest_test.rs  restart_resume_test.rs
