[workspace]
members  = [
    "event-model",
    "otk-protocol",
    "timing-core",
    "port-in-ingest",
    "port-out-event-log",
    "frame-codec",
    "ingest-protocol",
    "otk-contracts",
    "adapter-ingest-tcp",
    "adapter-event-log-segment",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
cobs        = "0.2"
minicbor    = { version = "0.24", default-features = false }
thiserror   = "2"
tokio       = { version = "1" }
event-model = { path = "event-model" }
