[workspace]
members  = [
    "event-model",
    "otk-protocol",
    "timing-core",
    "frame-codec",
    "ingest-protocol",
    "otk-contracts",
    "adapter-ingest-tcp",
    "adapter-event-log-segment",
    "adapter-ingest-unix-socket",
    "otk-sdk",
    "otk-devcerts",
    "producer-simulated",
    "timing-node",
    "conformance",
    "conformance-fixtures",
]
resolver = "2"

# Single source of truth for third-party dependency versions across
# every workspace member. Members opt in via `{ workspace = true,
# features = [...] }` and pick whatever feature subset they actually
# need; this block does not commit anyone to a feature set. Adding a
# new dep or bumping an existing one is a one-line change.
#
# Path deps to other workspace members are also declared here so
# adding a new member that depends on (say) `event-model` only
# requires the consumer to write `event-model = { workspace = true }`.
[workspace.dependencies]
# Third-party libraries.
async-trait        = "0.1"
axum               = "0.8"
cobs               = "0.2"
crc32fast          = "1"
futures-util       = "0.3"
minicbor           = { version = "0.24", default-features = false }
reqwest            = { version = "0.12", default-features = false }
# Default-features off so `event-model` (no_std + alloc) can depend on
# serde without dragging `std` in. Members that need std-based impls
# (Vec/HashMap/etc. derive, file I/O, etc.) opt in via
# `features = ["std"]`.
serde              = { version = "1", default-features = false }
serde_json         = "1"
tempfile           = "3"
thiserror          = "2"
tokio              = "1"
toml               = "0.8"
tower-http         = "0.6"
tracing            = "0.1"
tracing-subscriber = "0.3"
# OpenTelemetry bridge for `tracing`. Used to (a) extract a W3C
# `traceparent` from the producer's current `tracing::Span` before
# sending an envelope and (b) parent the runtime's per-event Span on
# the producer's remote span context when a traceparent arrives. Both
# crates work without an OTel SDK configured (extraction returns None,
# set_parent is a no-op against the default empty context) so consumers
# without OTel infrastructure pay only the dep-tree cost, not a
# behaviour change. `metrics` feature off; we use the trace API only.
tracing-opentelemetry = { version = "0.33", default-features = false }
opentelemetry      = { version = "0.32", default-features = false, features = ["trace"] }
uuid               = "1"
# Hot-reload: cross-platform file watching + atomic Arc rotation for
# auth-token swaps without dropping active connections. notify's
# `debouncer-mini` companion crate coalesces the noisy raw filesystem
# events into a single change notification per "file edit".
arc-swap           = "1"
notify             = { version = "8", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.7", default-features = false }
# TLS over TCP. `rustls` is the pure-Rust TLS impl; `tokio-rustls`
# wraps it for the tokio async runtime; `rustls-pemfile` parses PEM
# cert/key files at bind time. `aws_lc_rs` provider chosen for FIPS
# track and broad platform support; flip to `ring` if a future build
# target needs it. Pulled in only by adapter-ingest-tcp and otk-sdk
# under their respective `tls` feature flags so non-TLS consumers pay
# no dep-tree cost.
rustls             = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio-rustls       = { version = "0.26", default-features = false }
rustls-pemfile     = "2"
# Dev-only: generate self-signed CAs / server certs / client certs in
# tests so we don't ship fixture certs in the repo.
rcgen              = "0.13"

# Intra-workspace path deps. Members that need any of these declare
# `<name> = { workspace = true }` (plus optional `features = [...]`,
# `optional = true`, or `package = "..."` as needed).
adapter-event-log-segment  = { path = "adapter-event-log-segment" }
adapter-ingest-tcp         = { path = "adapter-ingest-tcp" }
adapter-ingest-unix-socket = { path = "adapter-ingest-unix-socket" }
conformance-fixtures       = { path = "conformance-fixtures" }
event-model                = { path = "event-model" }
frame-codec                = { path = "frame-codec" }
ingest-protocol            = { path = "ingest-protocol" }
otk-contracts              = { path = "otk-contracts" }
otk-protocol               = { path = "otk-protocol" }
# Default-features off so consumers explicitly pick "client" /
# "producer" / both. `otk-sdk` itself ships with `default = ["client"]`,
# which the workspace pin would silently include otherwise.
otk-sdk                    = { path = "otk-sdk", default-features = false }
timing-core                = { path = "timing-core" }
