[package]
name        = "adapter-event-log-segment"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Segment-file event log backend for OTK. Implements port-out-event-log using fixed-budget segment files on disk."

[dependencies]
port-out-event-log = { workspace = true }
event-model        = { workspace = true }
async-trait        = { workspace = true }
minicbor           = { workspace = true, features = ["derive", "alloc"] }
crc32fast          = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "sync", "io-util", "time"] }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt", "macros", "fs", "sync", "io-util", "time", "test-util"] }
tempfile = { workspace = true }
