[package]
name        = "adapter-event-log-segment"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Segment-file event log backend for OTK. Implements the EventLog outbound port (defined in timing-core::ports::outbound) using fixed-budget segment files on disk."

[dependencies]
# Adapters depend on `timing-core` for its port traits (here:
# `EventLog`, `LogSubscription`, `Offset`, `RetentionPolicy`,
# `StorageError`, `LogEntry`). The per-adapter `clippy.toml` denies
# reaching beyond `timing_core::ports::*` so the dep does not become a
# back-door into the domain layer.
timing-core        = { workspace = true }
event-model        = { workspace = true }
async-trait        = { workspace = true }
minicbor           = { workspace = true, features = ["derive", "alloc"] }
crc32fast          = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "sync", "io-util", "time"] }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt", "macros", "fs", "sync", "io-util", "time", "test-util"] }
tempfile = { workspace = true }
