[package]
name        = "adapter-ingest-tcp"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "TCP ingest adapter for OTK. Implements port-in-ingest: accepts producer connections, decodes OTK frames, and delivers typed events to the timing node."

[dependencies]
port-in-ingest  = { workspace = true }
otk-protocol    = { workspace = true }
event-model     = { workspace = true }
frame-codec     = { workspace = true }
ingest-protocol = { workspace = true }
async-trait     = { workspace = true }
tokio           = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt", "macros", "net", "io-util", "test-util"] }
minicbor = { workspace = true, features = ["alloc", "derive"] }
