[package]
name        = "adapter-ingest-unix-socket"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Unix-socket ingest adapter for OTK. Implements the EventIngestPort inbound port (defined in timing-core::ports::inbound) over a local AF_UNIX listener."

[dependencies]
# See adapter-ingest-tcp/Cargo.toml for the rationale on depending on
# `timing-core` and the clippy fence that keeps this dep narrow.
timing-core     = { workspace = true }
otk-protocol    = { workspace = true }
event-model     = { workspace = true }
frame-codec     = { workspace = true }
ingest-protocol = { workspace = true }
async-trait     = { workspace = true }
tokio           = { workspace = true, features = ["net", "io-util", "time", "fs"] }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt", "macros", "net", "io-util", "test-util", "fs"] }
minicbor = { workspace = true, features = ["alloc", "derive"] }
tempfile = { workspace = true }
