[package]
name        = "conformance"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Open Timekeeping conformance suite: verifies implementations against the canonical contracts."

[dependencies]
event-model        = { workspace = true, features = ["serde"] }
otk-protocol       = { workspace = true }
otk-contracts      = { workspace = true }
port-out-event-log = { workspace = true }
frame-codec        = { workspace = true }
ingest-protocol    = { workspace = true }
async-trait        = { workspace = true }
minicbor           = { workspace = true, features = ["alloc"] }
tokio              = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
