[package]
name        = "otk-protocol"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Shared DTOs for the OTK wire protocol: message envelope, handshake types, and protocol semantics."

[dependencies]
minicbor    = { workspace = true, features = ["derive", "alloc"] }
event-model = { workspace = true }
