[package]
name        = "otk-sdk"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Open Timekeeping SDK: consumer and producer features for timing applications."

[dependencies]
event-model   = { path = "../event-model" }
otk-contracts = { path = "../otk-contracts", optional = true }
protocol      = { path = "../otk-protocol", package = "otk-protocol", optional = true }
thiserror     = { workspace = true }
minicbor      = { version = "0.24", features = ["alloc"], optional = true }
tokio         = { version = "1", features = ["net", "io-util"], optional = true }
[features]
default         = ["client"]
client          = []
producer        = ["dep:otk-contracts", "dep:protocol", "dep:minicbor", "dep:tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "test-util"] }
