[package]
name        = "otk-sdk"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Open Timekeeping SDK: consumer and producer features for timing applications."

[dependencies]
event-model   = { workspace = true }
otk-contracts = { workspace = true, optional = true }
otk-protocol  = { workspace = true, optional = true }
thiserror     = { workspace = true }
minicbor      = { workspace = true, features = ["alloc"], optional = true }
tokio         = { workspace = true, features = ["net", "io-util"], optional = true }

[features]
default  = ["client"]
client   = []
producer = ["dep:otk-contracts", "dep:otk-protocol", "dep:minicbor", "dep:tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "test-util"] }
