[package]
name        = "otk-sdk"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Open Timekeeping SDK: consumer and producer features for timing applications."

[dependencies]
event-model            = { workspace = true }
otk-contracts          = { workspace = true, optional = true }
otk-protocol           = { workspace = true, optional = true }
thiserror              = { workspace = true }
minicbor               = { workspace = true, features = ["alloc"], optional = true }
tokio                  = { workspace = true, features = ["net", "io-util"], optional = true }
tracing                = { workspace = true, optional = true }
tracing-opentelemetry  = { workspace = true, optional = true }
opentelemetry          = { workspace = true, optional = true }
# Producer-side TLS, behind the `producer-tls` feature.
rustls                 = { workspace = true, optional = true, features = ["aws_lc_rs"] }
tokio-rustls           = { workspace = true, optional = true, features = ["aws_lc_rs"] }
rustls-pemfile         = { workspace = true, optional = true }

[features]
default  = ["client"]
client   = []
# Producer feature pulls in the OTel bridge so an outgoing envelope's
# traceparent is auto-extracted from the current tracing::Span.
# Without an OTel SDK configured at runtime, extraction returns None
# and the envelope ships with no traceparent (existing v0 behaviour).
producer = [
    "dep:otk-contracts",
    "dep:otk-protocol",
    "dep:minicbor",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
]
# Adds a `Transport::Tls { addr, tls_config }` variant for producer
# connections. Pulls in rustls only when the consumer asks for it.
producer-tls = ["producer", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "test-util"] }
