[package]
name        = "port-in-ingest"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Inbound port contract for OTK event ingestion: the typed boundary between the timing node and its transport adapters."

[dependencies]
async-trait = { workspace = true }
thiserror   = { workspace = true }
event-model = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
