[package]
name        = "port-out-event-log"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Outbound port contract for OTK event log persistence: the trait every storage backend implements."

[dependencies]
async-trait = { workspace = true }
event-model = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
