[package]
name        = "producer-simulated"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Simulated OTK producer: generates configurable synthetic detections and publishes them to a timing node. Binary: otk-simulator."

[[bin]]
name = "otk-simulator"
path = "src/main.rs"

[dependencies]
otk-sdk            = { workspace = true, features = ["producer", "producer-tls"] }
async-trait        = { workspace = true }
# `std` so derive(Serialize/Deserialize) on the std-backed config
# structs (String, Vec<String>, ...) works. The workspace pin keeps
# default-features off so no_std crates aren't forced to drag std in.
serde              = { workspace = true, features = ["derive", "std"] }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
