[package]
name        = "timing-node"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Open Timekeeping runtime node. Binary: otk-node."

[[bin]]
name = "otk-node"
path = "src/main.rs"

[dependencies]
event-model               = { workspace = true, features = ["serde"] }
otk-protocol              = { workspace = true }
ingest-protocol           = { workspace = true }
port-in-ingest            = { workspace = true }
port-out-event-log        = { workspace = true }
timing-core               = { workspace = true }
adapter-ingest-tcp        = { workspace = true }
adapter-event-log-segment = { workspace = true }
async-trait               = { workspace = true }
axum                      = { workspace = true, features = ["json"] }
futures-util              = { workspace = true }
serde                     = { workspace = true, features = ["derive", "std"] }
serde_json                = { workspace = true }
thiserror                 = { workspace = true }
tokio                     = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
toml                      = { workspace = true }
tower-http                = { workspace = true, features = ["cors"] }
tracing                   = { workspace = true }
tracing-subscriber        = { workspace = true, features = ["env-filter"] }

# The Unix-socket ingest adapter is cfg(unix) internally; gating the
# dep itself keeps it out of non-Unix builds where it would compile to
# an empty stub anyway. Windows builds skip the dep entirely.
[target.'cfg(unix)'.dependencies]
adapter-ingest-unix-socket = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["rt", "macros", "net", "time"] }
minicbor = { workspace = true, features = ["alloc"] }
reqwest  = { workspace = true, features = ["json", "rustls-tls", "stream"] }
