[package]
name        = "timing-node"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Open Timekeeping runtime node. Binary: otk-node."

[[bin]]
name = "otk-node"
path = "src/main.rs"

[dependencies]
event-model               = { workspace = true, features = ["serde"] }
otk-protocol              = { workspace = true }
ingest-protocol           = { workspace = true }
# `timing-core` carries the domain, the application service, AND the
# inbound/outbound port traits. `timing-node` is the composition root
# and therefore the only crate in the workspace that touches every
# layer (domain + services + ports).
timing-core               = { workspace = true }
adapter-ingest-tcp        = { workspace = true, features = ["tls"] }
adapter-event-log-segment = { workspace = true }
axum                      = { workspace = true, features = ["json"] }
futures-util              = { workspace = true }
serde                     = { workspace = true, features = ["derive", "std"] }
serde_json                = { workspace = true }
thiserror                 = { workspace = true }
tokio                     = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
toml                      = { workspace = true }
tower-http                = { workspace = true, features = ["cors"] }
tracing                   = { workspace = true }
tracing-subscriber        = { workspace = true, features = ["env-filter"] }
# OpenTelemetry bridge: parents the per-event tracing::Span on the
# producer's remote span context when an incoming envelope carries a
# valid W3C traceparent. With no OTel SDK configured at runtime, the
# parent set call is harmless (the default empty context).
tracing-opentelemetry     = { workspace = true }
opentelemetry             = { workspace = true }
# Hot-reload: file watcher + atomic-swap'd auth tokens. The watcher runs
# as a tokio task spawned next to the ingest listeners; auth state is
# arc-swapped so token rotation does not drop active sessions.
arc-swap                  = { workspace = true }
notify                    = { workspace = true }
notify-debouncer-mini     = { workspace = true }

# The Unix-socket ingest adapter is cfg(unix) internally; gating the
# dep itself keeps it out of non-Unix builds where it would compile to
# an empty stub anyway. Windows builds skip the dep entirely.
[target.'cfg(unix)'.dependencies]
adapter-ingest-unix-socket = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["rt", "macros", "net", "time"] }
minicbor = { workspace = true, features = ["alloc"] }
reqwest  = { workspace = true, features = ["json", "rustls-tls", "stream"] }
